## Not quite a boilerplate... - add webpack and gulp for modern dev tooling - add react as MVCish framework

--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,9 @@ typings/
 !.vscode/extensions.json
 .history
 
+# output and sourcemaps
+*.js.map
+*.css.map
+./dist/**/*.css
+
 # End of https://www.gitignore.io/api/git,node,visualstudiocode
