Model and some initial layout stuff - add redux for data model - add actions for redux - get the react components rendering initially
Basic directory structuring
- create references folder for ref files
- copy images and data to relevant folders

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ typings/
 # output and sourcemaps
 *.js.map
 *.css.map
-./dist/**/*.css
+
+.DS_Store
 
 # End of https://www.gitignore.io/api/git,node,visualstudiocode
